--- a/index.css
+++ b/index.css
@@ -393,6 +393,9 @@
    bottom: 200px;
    transition-duration: 0.5s;
 }
+.lower-mob{
+   display: none;
+}
 #app:hover{
    transform: scale(1.05);
 }
@@ -511,8 +514,8 @@
    margin-top: 70px;
 }
 .download-app-img img{
-   margin: 10px;
-   height: 60px;
+   margin: 4px;
+    height: 30px;
 }
 .lower-footer{
    color: white;
@@ -539,4 +542,227 @@
    #privacy{
       margin-right: 7vw;
    }
+ }
+
+ @media screen and (max-width: 1000px){
+   .lower-car-section{
+      flex-wrap: wrap;
+   }
+   .lower-car-left img{
+      width: 100vw;
+   }
+   .footer-cotainer{
+      flex-wrap: wrap;
+   }
+   .contact-us {
+      color: white;
+      font-family: cf-normal;
+      border-left: 2px solid rgb(160, 160, 160);
+      padding-left: 50px;
+      font-size: 1rem;
+      padding-top: 30px;
+      padding-bottom: 10px;
+      border: none;
+      padding-left: 5px;
+  }
+  .footer-cotainer {
+   display: flex;
+   justify-content: left;
+   margin-left: 10vw;
+}
+#app {
+   position: relative;
+   bottom: 0px;
+   transition-duration: 0.5s;
+   /* height: 682px; */
+   width: 90vw;
+}
+.mobile-bg {
+   width: 100%;
+   background-color: #E2EAEE;
+   height: auto;
+   background-position: center;
+   background-image: url(./horr.png);
+   background-size: cover;
+   display: flex;
+   position: relative;
+   justify-content: center;
+   flex-wrap: wrap;
+   text-align: center;
+}
+.nav{
+   flex-wrap: wrap;
+   width: 100%;
+}
+.why-drive-with-us{
+   width: 90vw;
+   margin-bottom: 30px;
+}
+.vozi-raodmap{
+   width: auto;
+}
+.lower-car-right {
+   /* width: 380px; */
+   margin-left: 4vw;
+   margin-top: 73px;
+   width: auto;
+   margin-bottom: 30px;
+}
+.lower-footer ul {
+   display: flex;
+   list-style: none;
+   text-transform: uppercase;
+   flex-wrap: wrap;
+}
+.what-need{
+   width: auto;
+}
+*{
+   overflow-x:hidden;
+}
+.header-content{
+   flex-wrap: wrap;
+}
+.input-form {
+   width: 45vw;
+   max-width: 700px;
+   min-width: auto;
+   background-color: white;
+   border-radius: 0px;
+   padding-top: 35px;
+   padding-bottom: 11px;
+   /* border: 4px solid #00FFF0; */
+   position: relative;
+   width: 100vw;
+   border: none;
+}
+.form-inner {
+   width: 90%;
+}
+#name {
+   margin-top: 20px;
+}
+.input-form input {
+   width: 100%;
+   margin: 15px auto;
+   height: 40px;
+   background-color: #e2e2e2;
+   padding-left: 20px;
+   border: none;
+}
+.header-content{
+   top: 125px;
+}
+.why-drive-with-us{
+   font-size: 1.5rem;
+   padding-top: 295px;
+}
+.boxes {
+   display: flex;
+   width: 330px;
+   font-size: 1.2rem;
+   margin: 25px 0px;
+}
+.vizifund-btn {
+   width: 95%;
+}
+.taxi-div-container {
+   display: flex;
+   flex-wrap: wrap;
+   padding-top: 100px;
+   /* justify-content: space-between; */
+}
+.taxi-div-container img {
+   position: absolute;
+   right: 0px;
+   position: relative;
+   width: 100vw;
+   margin-top: 20px;
+
+}
+
+.taxi-div-container {
+   padding-top: 10px;
+}
+.left-taxi-div {
+   margin-left: 3%;
+}
+.taxi-div{
+   overflow: hidden;
+   height: 722px;
+}
+#bg-points{
+   display: none;
+}
+.icons{
+   display: none;
+}
+.app-bg {
+   margin-top: 50px;
+   margin-right: 4vw;
+}
+#tt img{
+   margin-right: 110px;
+}
+.box-logo img{
+   height: 25px;
+}
+#one {
+   height: 20px;
+}
+.box-content{
+   font-size: 0.9rem;
+}
+#now-ability{
+   margin-right: 5px;
+   margin-left: 10px;
+}
+#join-comm{
+   margin-left: -11px;
+}
+#drive{
+   margin-left: -11px;
+}
+#drive-img img{
+   position: relative;
+   top: -10px;
+}
+.car-travel{
+   display: none;
+}
+.lower-car-left {
+   background-image: url(./lower-point.svg);
+   height: auto;
+   /* margin-top: 100px; */
+}
+.lower-car-section {
+   display: flex;
+   margin-top: 0px;
+}
+.lower-footer{
+   display: none;
+}
+.lower-mob{
+   display: flex;
+   flex-direction: column;
+}
+.lower-mob{
+   color: white;
+   font-family: cf-normal;
+   margin-left: 10vw;
+   margin-top: 50px;
+}
+.lower-mob li{
+   margin-bottom: 10px;
+   font-size: 0.9rem;
+}
+#copy{
+   margin-right: 10vw;
+   margin-top: 40px;
+   font-size: 0.7rem;
+
+}
+.footer-logo img{
+   height: 40px;
+}
  }
