--- a/index.css
+++ b/index.css
@@ -713,7 +713,15 @@
    margin-top: 20px;
 
 }
-
+.we-incharge {
+   font-family: cf-semi-bold;
+   font-size: 2.2rem;
+   color: black;
+   border-bottom: 2px solid black;
+   padding-bottom: 20px;
+   padding-right: 0px;
+   width: 85vw;
+}
 .taxi-div-container {
    padding-top: 10px;
 }
