reduce img size

--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@
    background-size: cover;
    position: relative;
    overflow: hidden;
-   background-image: url(./giorgio-trovato-z8dTxA6Uq2o-unsplash\ 1.svg);
+   background-image: url(./main-bg-1.png);
    color: white;
    z-index: 1;
 }
