--- a/index.css
+++ b/index.css
@@ -335,7 +335,7 @@
    background-size: 90vw auto;
  }
  .car-travel{
-   background-image: url(./vozi-roadmap.svg);
+   background-image: url(./vozi-1roadmap.svg);
  }
 .what-need{
    font-family: cf-semi-bold;
