--- a/index.css
+++ b/index.css
@@ -348,6 +348,19 @@
 .left-taxi-div{
    margin-left: 7%;
 }
+#span-point{
+   height: 10px;
+   width: 10px;
+   background-color: black;
+}
+.download-app-img img{
+   transition-duration: 0.5s;
+   cursor: pointer;
+}
+.download-app-img img:hover{
+   transform: scale(1.1);
+   transition-duration: 0.5s;
+}
 .requirement{
    text-transform: uppercase;
    font-family: cf-semi-bold;
@@ -669,6 +682,11 @@
    width: 100vw;
    border: none;
 }
+#download-btn:hover{
+   cursor: pointer;
+   transform: scale(1);
+   border: 2px solid #00FFF0;
+}
 .form-inner {
    width: 90%;
 }
@@ -846,5 +864,11 @@
 }
 #app{
    overflow: hidden;
+}
+.become-driver {
+   font-weight: bold;
+   font-family: cf-extra-bold;
+   text-transform: none;
+   font-size: 2.4rem;
 }
  }
