--- a/index.css
+++ b/index.css
@@ -148,7 +148,7 @@
    margin: auto;
 }
 .input-form ::placeholder{
-   font-family: cf-semi-bold;
+   font-family: cf-normal;
    font-size: 1.1rem;
    color: rgb(184, 184, 184);
    /* padding-left: 20px; */
@@ -705,11 +705,11 @@
    padding-top: 35px;
    padding-bottom: 11px;
    margin-top: 250px;
-   /* border: 4px solid #00FFF0; */
+   border: 3px solid #00FFF0;
    position: relative;
    width: 90vw;
    border-radius: 10px;
-   border: none;
+   
 }
 #download-btn:hover{
    cursor: pointer;
@@ -723,12 +723,14 @@
    margin-top: 20px;
 }
 .input-form input {
-   width: 100%;
-   margin: 15px auto;
-   height: 40px;
-   background-color: #e2e2e2;
-   padding-left: 20px;
-   border: none;
+   width: 92%;
+    margin: 15px auto;
+    border-radius: 6px;
+    height: 40px;
+    background-color: #e2e2e2;
+    padding-left: 20px;
+    border: none;
+    margin-left: 1px;
 }
 .header-content{
    top: 125px;
@@ -858,18 +860,19 @@
 .lower-mob{
    color: white;
    font-family: cf-normal;
-   margin-left: 10vw;
+   margin-left: 0vw;
    margin-top: 50px;
+   text-align: center;
 }
 .lower-mob li{
    margin-bottom: 10px;
    font-size: 0.9rem;
    text-align: center;
    position: relative;
-   right: 23px;
+   right: 0px;
 }
 #copy{
-   margin-right: 10vw;
+   margin-right: 0vw;
    margin-top: 40px;
    font-size: 0.7rem;
 
@@ -911,7 +914,7 @@
    font-weight: bold;
    font-family: cf-extra-bold;
    text-transform: none;
-   font-size: 2.4rem;
+   font-size: 2rem;
 }
 .why-drive-us-container {
    width: 85vw;
